# FirebotUndertale

./: Cargo.toml  README.md  config.example.toml
bot/: package-lock.json  package.json
bot/mock/: README.md  tiltify-mock.json  undertale-mock.json
bot/src/: firebot.ts  items.ts  main.ts  tiltify.ts  undertale.ts
src/: config.rs  future_utils.rs  http.rs  magic.rs  main.rs
tests/: integration_test.rs
tput-proc/: Cargo.toml
tput-proc/src/: lib.rs
