[package]
name = "twitch-controls-undertale"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
axum = "0.5.15"
axum-macros = "0.2.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
strum = { version = "0.24.1", features = ["derive"] }
sysinfo = "0.24.5"
tokio = { version = "1.20.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
vmemory = "0.1.8"
winapi = { version = "0.3.9", features = ["winuser", "errhandlingapi"] }
tput-proc = { path = "./tput-proc"}
config = { version = "0.13.2", features = ["toml"] }

[dev-dependencies]
dotenv = "0.15.0"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.11", features = ["json"] }
